correct letter-spacing

--- a/css/bars.css
+++ b/css/bars.css
@@ -38,6 +38,8 @@
   text-transform: uppercase;
   font-weight:100;
   margin-top:0;
+  letter-spacing:1px;
+
 }
 
 #credit {
@@ -53,7 +55,7 @@
   text-transform: uppercase;
   font-weight:100;
   margin-top:30px;
-  letter-spacing:1px;
+  letter-spacing:1.5px;
   display:none;
 }
 
@@ -95,6 +97,8 @@
     font-weight:100;
     margin-top:85px;
     display: none;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -110,7 +114,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:85px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
   }
 
 }
@@ -159,6 +163,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:60px;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -174,7 +180,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:60px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
   }
 
 }
@@ -223,6 +229,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-5px;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -238,7 +246,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-5px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
   }
 
 
@@ -272,6 +280,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-30px;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -287,7 +297,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-30px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
   }
 }
 
@@ -323,6 +333,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-30px;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -338,7 +350,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-30px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
   }
 
 
@@ -371,6 +383,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-80px;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -386,7 +400,8 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:-80px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
+
   }
 }
 
@@ -416,6 +431,8 @@
     font-size:1em;
     text-transform: uppercase;
     font-weight:100;
+    letter-spacing:1px;
+
   }
 
   #credit {
@@ -431,7 +448,7 @@
     text-transform: uppercase;
     font-weight:100;
     margin-top:30px;
-    letter-spacing:1px;
+    letter-spacing:1.5px;
     margin-top:-80px;
   }
 
